--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "jquery": "^3.2.1",
     "vue": "^2.3.3",
     "vue-bulma-components": "^1.5.0",
     "vue-notification": "^1.3.1",
     "vue-router": "^2.7.0",
     "vuetify": "^0.16.9",
+    "vuikit": "^0.6.3",
     "vulma": "0.0.11",
     "webrtc-adapter": "^4.2.2"
   },
@@ -48,6 +50,8 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
@@ -59,6 +63,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "sw-precache-webpack-plugin": "^0.9.1",
+    "uikit": "^3.0.0-beta.34",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
