--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "uikit": "^3.0.0-beta.34",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
+    "vue-slick": "^1.1.12",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
