--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "element-ui": "^2.0.5",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -65,6 +66,7 @@
     "sw-precache-webpack-plugin": "^0.9.1",
     "uikit": "^3.0.0-beta.34",
     "url-loader": "^0.5.8",
+    "vue-form-wizard": "^0.7.1",
     "vue-loader": "^12.1.0",
     "vue-slick": "^1.1.12",
     "vue-style-loader": "^3.0.1",
