--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "babel-register": "^6.22.0",
     "bulma": "^0.4.4",
     "chalk": "^1.1.3",
+    "chart.js": "^2.7.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -66,6 +67,7 @@
     "sw-precache-webpack-plugin": "^0.9.1",
     "uikit": "^3.0.0-beta.34",
     "url-loader": "^0.5.8",
+    "vue-chartjs": "^3.0.2",
     "vue-form-wizard": "^0.7.1",
     "vue-loader": "^12.1.0",
     "vue-slick": "^1.1.12",
