--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "jade": "^1.11.0",
     "jquery": "^3.2.1",
     "vue": "^2.3.3",
     "vue-bulma-components": "^1.5.0",
+    "vue-file-base64": "^1.0.2",
     "vue-notification": "^1.3.1",
     "vue-router": "^2.7.0",
+    "vuelidate": "^0.6.1",
     "vuetify": "^0.16.9",
     "vuikit": "^0.6.3",
     "vulma": "0.0.11",
