--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "request": "^2.81.0",
     "request-debug": "^0.2.0",
     "string-mask": "^0.3.0",
+    "vuelidate": "^0.6.1",
     "winston": "^2.3.0",
     "winston-firehose": "^1.0.8"
   },
